<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleX="2"
            android:scaleY="2"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lottie_privacy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_16"
            android:text="@string/target_configuration_settings_info_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Smartspacer"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_8"
            android:text="@string/target_configuration_settings_info_p1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_8"
            android:text="@string/target_configuration_settings_info_p2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <TextView
            android:id="@+id/info_p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_8"
            android:text="@string/target_configuration_settings_info_p3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/info_sign_in"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_32"
            android:elevation="8dp"
            android:minWidth="0dp"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_16"
            android:text="@string/target_configuration_settings_info_sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer.Medium"
            android:textColor="?android:textColorPrimary"
            app:cornerRadius="4dp"
            app:icon="@drawable/ic_amazon"
            app:iconPadding="@dimen/margin_16"
            app:iconSize="24dp"
            app:iconTint="@null" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>